--- a/迭代一/迭代一任务安排.md
+++ b/迭代一/迭代一任务安排.md
@@ -11,8 +11,11 @@
 
   [需求-代码矩阵.csv](./需求-代码矩阵.csv)
 - [ ] CI/CD - 谭子悦
+- [ ] Dependency repo 切换为国内镜像
 
 ## JavaDoc & 需求跟踪矩阵
+
+3月5日（星期日）前完成
 
 > 完成的填入 `X`；
 > 最后六个为两人负责一个类，分工由负责的两人自行协商。
