--- a/迭代一/开发规范.md
+++ b/迭代一/开发规范.md
@@ -67,3 +67,8 @@ Commit 信息应采用格式：`<type>: <your msg>`
 ### 注释规范
 
 [How to Write Doc Comments for the Javadoc Tool (oracle.com)](https://www.oracle.com/technical-resources/articles/java/javadoc-tool.html)
+
+## 注意事项
+
+- `[建议]` 使用 SSH 连接 Remote Repository
+- `[必须]` 设置好两个 repo 的 local git config 的 name 和 email
