--- a/迭代一/开发规范.md
+++ b/迭代一/开发规范.md
@@ -56,6 +56,25 @@ Commit 信息应采用格式：`<type>: <your msg>`
 
 - 此处的 `<type>` 同上，如果不确定类型可以写 `wip` (working in progress)
 
+#### SSH Key
+
+> 参考：[Sign commits with SSH keys](https://docs.gitlab.com/ee/user/project/repository/ssh_signed_commits/)
+
+1. 在平台上添加你的 SSH signing key
+2. 设置全局 Git 签名方法：`git config --global gpg.format ssh`
+   - 在 GitLab 上 Authentication 和 Signing 是一起的，但是 Github 是分开的
+3. 指定签名 SSH Key: `git config --global user.signingkey ~/.ssh/<your key>`
+4. 设置全局签名 commit: `git config --global commit.gpgsign true`
+
+如果一切正常，在平台上你的 commit 记录会有 `verified` 的 tag
+
+#### Local Config
+
+- git local config 的 name 要写自己的名字，不然默认就是 GitHub 用户名，提交后可能会出问题
+- 如果想识别到自己的 github 用户，email 填 github 同邮箱
+- 但是软工三提交要求：请在课程过程中每位同学全程使用一致的 Git 用户名、Git 邮箱，要求 Git 用户名 为自己姓名的拼音；Git 邮箱为校内邮箱。
+- 所以建议把自己的教育邮箱加进 GitHub
+
 ### 开发流程
 
 1. 从 `development` 创建自己的分支；
@@ -70,5 +89,5 @@ Commit 信息应采用格式：`<type>: <your msg>`
 
 ## 注意事项
 
-- `[建议]` 使用 SSH 连接 Remote Repository
-- `[必须]` 设置好两个 repo 的 local git config 的 name 和 email
+- `[建议]` 配置 SSH 签名
+- `[必须]` 设置好 local git config 的 name 和 email
