迭代一部分完成

--- a/迭代一/迭代一任务安排.md
+++ b/迭代一/迭代一任务安排.md
@@ -28,9 +28,9 @@
 | sentistrength.TextParsingOptions             | 徐浩钦 |          |          |
 | sentistrength.ClassificationResources        | 徐浩钦 |          |          |
 | sentistrength.ClassificationStatistics       | 徐浩钦 |          |          |
-| sentistrength.BoosterWordsList               | 杜威   |          |          |
-| sentistrength.CorrectSpellingsList           | 杜威   |          |          |
-| sentistrength.EmoticonsList                  | 杜威   |          |          |
+| sentistrength.BoosterWordsList               | 杜威   | x | x |
+| sentistrength.CorrectSpellingsList           | 杜威   | x | x |
+| sentistrength.EmoticonsList                  | 杜威   | x | x |
 | sentistrength.EvaluativeTerms                | 邓尤亮 |          |          |
 | sentistrength.IdiomList                      | 邓尤亮 |          |          |
 | sentistrength.IronyList                      | 邓尤亮 |          |          |
