dengyouliang: 迭代一部分完成

--- a/迭代一/迭代一任务安排.md
+++ b/迭代一/迭代一任务安排.md
@@ -31,9 +31,9 @@
 | sentistrength.BoosterWordsList               | 杜威   | x | x |
 | sentistrength.CorrectSpellingsList           | 杜威   | x | x |
 | sentistrength.EmoticonsList                  | 杜威   | x | x |
-| sentistrength.EvaluativeTerms                | 邓尤亮 |          |          |
-| sentistrength.IdiomList                      | 邓尤亮 |          |          |
-| sentistrength.IronyList                      | 邓尤亮 |          |          |
+| sentistrength.EvaluativeTerms                | 邓尤亮 |    X     |    X     |
+| sentistrength.IdiomList                      | 邓尤亮 |    X     |    X     |
+| sentistrength.IronyList                      | 邓尤亮 |    X     |    X     |
 | sentistrength.NegatingWordList               | 华广松 |          |          |
 | sentistrength.SentimentWords                 | 华广松 |          |          |
 | sentistrength.QuestionWords                  | 华广松 |          |          |
