--- a/迭代一/开发规范.md
+++ b/迭代一/开发规范.md
@@ -14,7 +14,11 @@
 
 IDEA 打开后需要先添加为 gradle project.
 
-之后可以通过 IDEA 侧面板的 `Tasks -> application -> run`  运行。
+运行方法：
+1. IDEA 侧面板的 `Tasks -> application -> run`  
+2. 命令行 `gradle run` 
+
+> 带参数运行：`gradle run --args="your args"`
 
 >  如果你不熟悉/没用过 Gradle，建议你花点时间学习一下，反正迟早会用到。
 > [Gradle User Manual](https://docs.gradle.org/current/userguide/userguide.html)
