docs:prefinish mu tasks

--- a/迭代一/迭代一任务安排.md
+++ b/迭代一/迭代一任务安排.md
@@ -34,9 +34,9 @@
 | sentistrength.EvaluativeTerms                | 邓尤亮 |    X     |    X     |
 | sentistrength.IdiomList                      | 邓尤亮 |    X     |    X     |
 | sentistrength.IronyList                      | 邓尤亮 |    X     |    X     |
-| sentistrength.NegatingWordList               | 华广松 |          |          |
-| sentistrength.SentimentWords                 | 华广松 |          |          |
-| sentistrength.QuestionWords                  | 华广松 |          |          |
+| sentistrength.NegatingWordList               | 华广松 | X | X |
+| sentistrength.SentimentWords                 | 华广松 | X | X |
+| sentistrength.QuestionWords                  | 华广松 | X | X |
 | sentistrength.Lemmatiser                     | 陈骏   |          |          |
 | sentistrength.UnusedTermsClassificationIndex | 陈骏   |          |          |
 | sentistrength.Corpus                         | 陈骏   |          |          |
@@ -44,5 +44,5 @@
 | sentistrength.Paragraph - 2                  | 徐浩钦 |          |          |
 | sentistrength.Sentence - 1                   | 杜威   |          |          |
 | sentistrength.Sentence - 2                   | 邓尤亮 |          |          |
-| sentistrength.Term - 1                       | 华广松 |          |          |
+| sentistrength.Term - 1                       | 华广松 | X | X |
 | sentistrength.Term - 2                       | 陈骏   |          |          |
