--- a/迭代一/迭代一任务安排.md
+++ b/迭代一/迭代一任务安排.md
@@ -39,7 +39,7 @@
 | sentistrength.QuestionWords                  | 华广松 | X | X |
 | sentistrength.Lemmatiser                     | 陈骏   | X | X |
 | sentistrength.UnusedTermsClassificationIndex | 陈骏   | X | X |
-| sentistrength.Corpus                         | 陈骏   |          |          |
+| sentistrength.Corpus                         | 陈骏   | X | X |
 | sentistrength.Paragraph - 1                  | 谭子悦 |          |          |
 | sentistrength.Paragraph - 2                  | 徐浩钦 |          |          |
 | sentistrength.Sentence - 1                   | 杜威   |          |          |
