--- a/迭代一/迭代一任务安排.md
+++ b/迭代一/迭代一任务安排.md
@@ -25,9 +25,9 @@
 | sentistrength.SentiStrength                  | 谭子悦 |          |          |
 | sentistrength.Test                           | 谭子悦 |          |          |
 | sentistrength.ClassificationOptions          | 谭子悦 |          |          |
-| sentistrength.TextParsingOptions             | 徐浩钦 |          |          |
-| sentistrength.ClassificationResources        | 徐浩钦 |          |          |
-| sentistrength.ClassificationStatistics       | 徐浩钦 |          |          |
+| sentistrength.TextParsingOptions             | 徐浩钦 | x | x |
+| sentistrength.ClassificationResources        | 徐浩钦 | x | x |
+| sentistrength.ClassificationStatistics       | 徐浩钦 | x | x |
 | sentistrength.BoosterWordsList               | 杜威   | x | x |
 | sentistrength.CorrectSpellingsList           | 杜威   | x | x |
 | sentistrength.EmoticonsList                  | 杜威   | x | x |
