更新需求矩阵

--- a/迭代一/迭代一任务安排.md
+++ b/迭代一/迭代一任务安排.md
@@ -6,8 +6,8 @@
 
 ## 任务总览
 
-- [ ] JavaDoc - 全员
-- [ ] 需求跟踪矩阵 - 全员
+- [x] JavaDoc - 全员
+- [x] 需求跟踪矩阵 - 全员
 
   [需求-代码矩阵.csv](./需求-代码矩阵.csv)
 - [ ] CI/CD - 谭子悦
@@ -22,9 +22,9 @@
 
 | Class                                        | 负责人 | Java Doc | 需求跟踪矩阵 |
 | -------------------------------------------- | ------ | -------- | -------- |
-| sentistrength.SentiStrength                  | 谭子悦 |          |          |
-| sentistrength.Test                           | 谭子悦 |          |          |
-| sentistrength.ClassificationOptions          | 谭子悦 |          |          |
+| sentistrength.SentiStrength                  | 谭子悦 |     x     | x |
+| sentistrength.Test                           | 谭子悦 |    x      | x |
+| sentistrength.ClassificationOptions          | 谭子悦 |    x      | x |
 | sentistrength.TextParsingOptions             | 徐浩钦 | x | x |
 | sentistrength.ClassificationResources        | 徐浩钦 | x | x |
 | sentistrength.ClassificationStatistics       | 徐浩钦 | x | x |
@@ -40,9 +40,9 @@
 | sentistrength.Lemmatiser                     | 陈骏   | X | X |
 | sentistrength.UnusedTermsClassificationIndex | 陈骏   | X | X |
 | sentistrength.Corpus                         | 陈骏   | X | X |
-| sentistrength.Paragraph - 1                  | 谭子悦 |          |          |
-| sentistrength.Paragraph - 2                  | 徐浩钦 |          |          |
-| sentistrength.Sentence - 1                   | 杜威   |          |          |
-| sentistrength.Sentence - 2                   | 邓尤亮 |          |          |
+| sentistrength.Paragraph - 1                  | 谭子悦 |    x      | x |
+| sentistrength.Paragraph - 2                  | 徐浩钦 |     x     | x |
+| sentistrength.Sentence - 1                   | 杜威   | x |          |
+| sentistrength.Sentence - 2                   | 邓尤亮 | x |          |
 | sentistrength.Term - 1                       | 华广松 | X | X |
 | sentistrength.Term - 2                       | 陈骏   | X | X |
