填写 Sentence 需求矩阵

--- a/迭代一/迭代一任务安排.md
+++ b/迭代一/迭代一任务安排.md
@@ -43,6 +43,6 @@
 | sentistrength.Paragraph - 1                  | 谭子悦 |    x      | x |
 | sentistrength.Paragraph - 2                  | 徐浩钦 |     x     | x |
 | sentistrength.Sentence - 1                   | 杜威   | x |          |
-| sentistrength.Sentence - 2                   | 邓尤亮 | x |          |
+| sentistrength.Sentence - 2                   | 邓尤亮 | X | X |
 | sentistrength.Term - 1                       | 华广松 | X | X |
 | sentistrength.Term - 2                       | 陈骏   | X | X |
