--- a/迭代二/迭代二任务安排.md
+++ b/迭代二/迭代二任务安排.md
@@ -28,7 +28,7 @@
 
 1. 产物放置于：`./迭代二/助教数据分析`
 2. 文本情绪结果：[社交文本.csv](迭代二/助教数据分析/社交文本.csv)、[软工文本.csv](迭代二/助教数据分析/软工文本.csv)
-   第⼀列为序号，第⼆列为⽂本，第三列为 sentistrength 的 trinary 分析结果。请不要 打乱⽂本顺序！
+   第⼀列为序号，第⼆列为⽂本，第三列为 sentistrength 的 trinary 分析结果。请不要打乱⽂本顺序！
 3. 分析报告：[迭代二/助教数据分析/report.md](迭代二/助教数据分析/report.md)
 4. 如果提供了更多数据，请保存到 `迭代⼆/⼩组数据分析` ⽬录中，同样分为两个⽂件。第⼀列为序号，第⼆列为⽂本，第三列为 sentistrength 的分析结果，第四列为⽂本来源。同时在 [迭代二/小组数据分析/report.md](迭代二/小组数据分析/report.md) 提供报告。
 
@@ -53,6 +53,8 @@
 
 - [ ] `C41 - <必须>` 可利⽤设计模式优化，重构代码，重构后需提供设计⽂档，并在⽂档中说明设计的逻辑；
 - [ ] `C42 - <必须>` 为 SentiStrength 设计 UI ,要求可以完成基本 GUI 交互，UI 样式可参考官⽹；
+  - 接口文档写成 Markdown，包含内容：
+    - 接口名称、URL、参数（穿参数的方法）、HTTP 方法、返回值、错误处理……
 
 #### 4.2 要求
 
@@ -76,23 +78,38 @@
 
 ## 分工安排
 
-| 任务  | 负责人 | 完成情况 | 备注 |
-| ----- | ------ | -------- | ---- |
-| `C11` | 谭子悦 |          |      |
-| `C12` | 谭子悦 |          |      |
-| `C21` |        |          |      |
-| `C31` |        |          |      |
-| `C32` |        |          |      |
-| `C33` |        |          |      |
-| `C41` |        |          |      |
-| `C42` |        |          |      |
-| `C51` | TODO   |          |      |
-| `O21` |        |          |      |
-| `O31` |        |          |      |
+### 1. 人员安排
 
-- 谭子悦
-- 邓尤亮
-- 徐浩钦
-- 陈骏
-- 华广松
-- 杜威
+| 任务  | 负责人           | 完成情况 | 备注 |
+| ----- | ---------------- | -------- | ---- |
+| `C11` | 谭子悦           |          |      |
+| `C12` | 谭子悦           |          |      |
+| `C21` | 华广松           |          |      |
+| `C31` | 杜威 徐浩钦 陈骏 |          |      |
+| `C32` | 杜威 徐浩钦 陈骏 |          |      |
+| `C33` | 杜威 徐浩钦 陈骏 |          |      |
+| `C41` | 谭子悦           |          |      |
+| `C42` | 邓尤亮           |          |      |
+| `C51` | TODO             |          |      |
+| `O21` | 华广松           |          |      |
+| `O31` | 杜威 徐浩钦 陈骏 |          |      |
+
+### 2. 时间安排
+
+- 中期检查：2023.03.27
+- 最终截止日期：2023.04.14
+
+迭代二总共的开发时间大约为三周，可以分为 W1, W2, W3.
+
+每周的任务为：（每周任务的 Deadline 为当周周日）
+
+- W1
+  - `<Hard>` CI/CD
+- W2
+  - `[Soft]` 文本分析初步结果
+  - `[Soft]` CheckStyle 初步结果
+  - `[Soft]` 前端接口文档
+  - `[Soft]` 重构初步文档
+- W3
+  - `<Hard>` 全部功能开发完成
+  - `<Hard>` 展示视频
