--- a/开发规范.md
+++ b/开发规范.md
@@ -1,10 +1,9 @@
 # 开发规范
 
-| 变更人 | 变更日期   | 变更内容   |
-| ------ | ---------- | ---------- |
-| 谭子悦 | 2023/02/28 | 文档初始化 |
-
-
+| 变更人 | 变更日期   | 变更内容       |
+| ------ | ---------- | -------------- |
+| 谭子悦 | 2023/02/28 | 文档初始化     |
+| 谭子悦 | 2023/03/21 | 更新：文档规范 |
 
 [TOC]
 
@@ -15,17 +14,21 @@
 IDEA 打开后需要先添加为 gradle project.
 
 运行方法：
-1. IDEA 侧面板的 `Tasks -> application -> run`  
-2. 命令行 `gradle run` 
+
+1. IDEA 侧面板的 `Tasks -> application -> run`
+2. 命令行 `gradle run`
 
 > 带参数运行：`gradle run --args="your args"`
 
->  如果你不熟悉/没用过 Gradle，建议你花点时间学习一下，反正迟早会用到。
+> 如果你不熟悉/没用过 Gradle，建议你花点时间学习一下，反正迟早会用到。
 > [Gradle User Manual](https://docs.gradle.org/current/userguide/userguide.html)
 
 ## 开发
 
 ### Git 规范
+
+- `[建议]` 配置 SSH 签名
+- `<必须>` 设置好 local git config 的 name 和 email
 
 #### Branch
 
@@ -40,13 +43,14 @@ IDEA 打开后需要先添加为 gradle project.
 
 - `<name>` 为自己的姓名拼音，如 `jiangyanyan`
 - `<type>` 为变更类型，包括：
-  - `feat`：添加特性 
-  - `fix`：修复bug 
-  - `docs`：更新文档 
-  - `style`：整理代码样式，没有改变代码逻辑 
-  - `refactor`：重构部分代码逻辑，但是没有添加新特性，也没有修复bug 
-  - `perf`：优化代码性能 
-  - `test`：增加测试用例 
+
+  - `feat`：添加特性
+  - `fix`：修复 bug
+  - `docs`：更新文档
+  - `style`：整理代码样式，没有改变代码逻辑
+  - `refactor`：重构部分代码逻辑，但是没有添加新特性，也没有修复 bug
+  - `perf`：优化代码性能
+  - `test`：增加测试用例
   - `chore`：改变构建流程、增加依赖库、工具等
   - `pom`：依赖版本变动
 
@@ -91,7 +95,34 @@ Commit 信息应采用格式：`<type>: <your msg>`
 
 [How to Write Doc Comments for the Javadoc Tool (oracle.com)](https://www.oracle.com/technical-resources/articles/java/javadoc-tool.html)
 
-## 注意事项
+## 文档
 
-- `[建议]` 配置 SSH 签名
-- `[必须]` 设置好 local git config 的 name 和 email
+### 文档通用规范
+
+- `<必须>` 在文档顶部注明变更日志，参照本文档。
+
+### 接口文档规范
+
+接口文档描述了后端承担的功能职责，在接口文档中，每一个接口应包含以下信息：
+
+- HTTP 方法
+- 接口名称
+- 接口解释
+- 请求路径
+- 请求参数
+- 响应结果
+- 错误情况
+
+后端的所有返回结果用 `Result<T>` 封装，结构如下：
+
+```java
+public class Result<T> {
+  private Integer code; // 返回码，无异常为 0
+  private String msg; // 返回信息，无异常为空
+  private T data; // 实际的返回数据
+}
+```
+
+其中返回码应规定于 [返回码规范.md](迭代二/项目文档/接口文档/返回码规范.md) 
+
+示例：[接口文档示例.md](迭代二/项目文档/接口文档/接口文档示例.md) 
