--- a/开发规范.md
+++ b/开发规范.md
@@ -100,6 +100,10 @@ Commit 信息应采用格式：`<type>: <your msg>`
 ### 文档通用规范
 
 - `<必须>` 在文档顶部注明变更日志，参照本文档。
+- `<必须>` 了解清楚 HTTP 各方法的参数传递惯例，比如 `GET` 和 `POST`.
+  - 参考 MDN Web Docs，或者 RFC 原文。
+
+- `[建议]` 参考 RESTful API 开发规范
 
 ### 接口文档规范
 
