更新：新增类规范、项目结构等

--- a/开发规范.md
+++ b/开发规范.md
@@ -4,6 +4,7 @@
 | ------ | ---------- | -------------- |
 | 谭子悦 | 2023/02/28 | 文档初始化     |
 | 谭子悦 | 2023/03/21 | 更新：文档规范 |
+| 谭子悦 | 2023/03/28 | 更新：新增类规范、项目结构等 |
 
 [TOC]
 
@@ -22,6 +23,33 @@ IDEA 打开后需要先添加为 gradle project.
 
 > 如果你不熟悉/没用过 Gradle，建议你花点时间学习一下，反正迟早会用到。
 > [Gradle User Manual](https://docs.gradle.org/current/userguide/userguide.html)
+
+## 项目结构
+
+> 更新于 2023年3月28日
+
+```c
+./src
+├── SentStrength_Data	// SentiStrength 配置文件
+├── main
+│   ├── java
+│   │   ├── uk
+│   │   │   └── ac
+│   │   │       └── wlv
+│   │   │           ├── sentistrength	// SentiStrength 核心包
+│   │   │           ├── utilities			// 工具包
+│   │   │           └── wkaclass			// 机器学习相关包
+│   │   └── web	  // Web 后端相关包
+│   └── resources // 存放 Spring 相关配置
+└── test
+    └── java
+        ├── sample // 测试样本，后续测试不应编写于此
+        ├── uk
+        │   └── ac
+        │       └── wlv
+        │           └── sentistrength // 所有关于 SentiStrength 的核心测试都应编写于此
+        └── web // 所有关于后端 Web 的测试都应编写于此
+```
 
 ## 开发
 
@@ -93,7 +121,25 @@ Commit 信息应采用格式：`<type>: <your msg>`
 
 ### 注释规范
 
+#### JavaDoc
+
 [How to Write Doc Comments for the Javadoc Tool (oracle.com)](https://www.oracle.com/technical-resources/articles/java/javadoc-tool.html)
+
+#### 新增代码规范
+
+1. 对于所有新增的类，必须用 JavaDoc 注明负责人、时间、简介等相关信息，格式如下：
+
+   ```java
+   /**
+    * @author 你的名字
+    * @date 日期，比如：2023/3/28
+    * @description 对这个类的简介
+    */
+   pubic class SomeClass {}
+   ```
+2. 对于新增方法，还是按要求编写相应 JavaDoc.
+3. 较为复杂的逻辑请写清楚行内注释。
+4. 待办注释写清楚负责人，比如：`// TODO-jiangyanyan: 114514...`
 
 ## 文档
 
