--- a/迭代二/项目文档/接口文档/接口文档.md
+++ b/迭代二/项目文档/接口文档/接口文档.md
@@ -12,6 +12,8 @@
 
 ### 1.3 请求参数
 
+body 类型: `application/json`
+
 | 名称    | 位置 | 类型    | 是否必须 | 中文名   | 说明                                  |
 | ------- | ---- | ------- | -------- | -------- | ------------------------------------- |
 | text    | body | String  | 是       | 文本     | 被分析的文本语句                      |
@@ -19,7 +21,29 @@
 | explain | body | Boolean | 是       | 解释     | 是否需要解释                          |
 | options | body | Object  | 否       | 分析选项 | 分析选项，参考 Manual。               |
 
-body类型：`application/json`
+其中 options:
+
+| 名称                                 | 位置         | 类型    | 是否必须 | 中文名                             | 说明                   |
+| ------------------------------------ | ------------ | ------- | -------- | ---------------------------------- | ---------------------- |
+| alwaysSplitWordsAtApostrophes        | body.options | Boolean | 否       | 总是在撇号处分词                   |                        |
+| noBoosters                           | body.options | Boolean | 否       | 不使用助推词                       |                        |
+| noNegatingPositiveFlipsEmotion       | body.options | Boolean | 否       | 不使用否定词反转情绪               |                        |
+| noNegatingNegativeNeutralisesEmotion | body.options | Boolean | 否       | 不使用否定词中和消极词             |                        |
+| negatedWordStrengthMultiplier        | body.options | Number  | 否       | 否定词的强度倍数                   | 默认 0.5               |
+| maxWordsBeforeSentimentToNegate      | body.options | Integer | 否       | 否定词与 <br/>感情词之间的最大词数 | 默认 0                 |
+| noIdioms                             | body.options | Boolean | 否       | 不使用习语                         |                        |
+| questionsReduceNeg                   | body.options | Boolean | 否       | 在问句中减少消极情感               |                        |
+| noEmoticons                          | body.options | Boolean | 否       | 不使用表情符号                     |                        |
+| exclamations2                        | body.options | Boolean | 否       | 感叹号分数加二                     |                        |
+| mood                                 | body.options | Integer | 否       | 心情                               | 可选值：-1, 0, 1       |
+| noMultiplePosWords                   | body.options | Boolean | 否       | 不允许多个积极词增加积极情感       |                        |
+| noMultipleNegWords                   | body.options | Boolean | 否       | 不允许多个消极词增加消极情感       |                        |
+| noIgnoreBoosterWordsAfterNegatives   | body.options | Boolean | 否       | 不忽略否定词后的助推词             |                        |
+| noDictionary                         | body.options | Boolean | 否       | 不使用字典纠正拼写                 |                        |
+| noDeleteExtraDuplicateLetters        | body.options | Boolean | 否       | 不删除单词中额外的重复字母         |                        |
+| illegalDoubleLettersInWordMiddle     | body.options | String  | 否       | 单词中的非法重复字母               | 默认 ahijkquvxyz       |
+| illegalDoubleLettersAtWordEnd        | body.options | String  | 否       | 单词末尾的非法重复字母             | 默认 achijkmnpqruvwxyz |
+| noMultipleLetters                    | body.options | Boolean | 否       | 不允许重复单词                     |                        |
 
 示例1：
 
@@ -82,6 +106,8 @@ class TextAnalysisVO {
 }
 ```
 
+示例：
+
 ```json
 {
   "code": 0,
@@ -99,11 +125,11 @@ class TextAnalysisVO {
 
 
 
-## 2. POST 对文本文件运行一次情感分析
+## 2. POST 对文本文件内容运行一次情感分析
 
 ### 2.1 接口解释
 
-对某一个文本文件进行情感分析。
+对某一个文本文件的内容进行情感分析。需要指定输出的模式和是否需要解释。分析的选项是可选的。
 
 ### 2.2 请求路径
 
@@ -111,16 +137,37 @@ class TextAnalysisVO {
 
 ### 2.3 请求参数
 
-body类型：`form/data`
+body类型：`application/json`
 
-| 名称 | 位置 | 类型 | 是否必须 | 中文名   | 说明             |
-| ---- | ---- | ---- | -------- | -------- | ---------------- |
-| file | body | File | 是       | 文本文件 | 被分析的文本文件 |
+| 名称    | 位置 | 类型    | 是否必须 | 中文名   | 说明                                  |
+| ------- | ---- | ------- | -------- | -------- | ------------------------------------- |
+| file    | body | String  | 是       | 文件     | 被分析的文件内容                      |
+| mode    | body | String  | 是       | 输出模式 | 可选：trinary, binary, default, scope |
+| explain | body | Boolean | 是       | 解释     | 是否需要解释                          |
+| options | body | Object  | 否       | 分析选项 | 分析选项，参考 Manual和第一个API。    |
+
+**options 中的参数参考第一个API**
+
+示例1：
+
+```json
+{
+    "file": "I don't hate you.\ndoesn't work. how do I do this?\nExcellent! Just what i needed!",
+	"mode": "trinary",
+	"explain": false
+}
+```
+
+
 
 ### 2.4 响应
 
 ```java
-Result<String>;
+Result<FileAnalysisVO>;
+
+FileAnalysisVO {
+    String result;
+}
 ```
 
 ```json
@@ -128,7 +175,7 @@ Result<String>;
   "code": 0,
   "msg": "success",
   "data": {
-      "result": {result}
+      "result": "Positive	Negative	Text\n1	-1	I don't hate you.\n1	-1	doesn't work. how do I do this?\n5	-1	Excellent! Just what i needed!\n"
   }
 }
 ```
