docs: 更新接口文档，修改接口中的选项相关说明

--- a/迭代二/项目文档/接口文档/接口文档.md
+++ b/迭代二/项目文档/接口文档/接口文档.md
@@ -17,33 +17,33 @@ body 类型: `application/json`
 | 名称    | 位置 | 类型    | 是否必须 | 中文名   | 说明                                  |
 | ------- | ---- | ------- | -------- | -------- | ------------------------------------- |
 | text    | body | String  | 是       | 文本     | 被分析的文本语句                      |
-| mode    | body | String  | 是       | 输出模式 | 可选：trinary, binary, default, scope |
+| mode    | body | String  | 是       | 输出模式 | 可选：trinary, binary, default, scale |
 | explain | body | Boolean | 是       | 解释     | 是否需要解释                          |
-| options | body | Object  | 否       | 分析选项 | 分析选项，参考 Manual。               |
+| options | body | Object  | 是       | 分析选项 | 分析选项，参考 Manual。               |
 
 其中 options:
 
-| 名称                                 | 位置         | 类型    | 是否必须 | 中文名                             | 说明                   |
-| ------------------------------------ | ------------ | ------- | -------- | ---------------------------------- | ---------------------- |
-| alwaysSplitWordsAtApostrophes        | body.options | Boolean | 否       | 总是在撇号处分词                   |                        |
-| noBoosters                           | body.options | Boolean | 否       | 不使用助推词                       |                        |
-| noNegatingPositiveFlipsEmotion       | body.options | Boolean | 否       | 不使用否定词反转情绪               |                        |
-| noNegatingNegativeNeutralisesEmotion | body.options | Boolean | 否       | 不使用否定词中和消极词             |                        |
-| negatedWordStrengthMultiplier        | body.options | Number  | 否       | 否定词的强度倍数                   | 默认 0.5               |
-| maxWordsBeforeSentimentToNegate      | body.options | Integer | 否       | 否定词与 <br/>感情词之间的最大词数 | 默认 0                 |
-| noIdioms                             | body.options | Boolean | 否       | 不使用习语                         |                        |
-| questionsReduceNeg                   | body.options | Boolean | 否       | 在问句中减少消极情感               |                        |
-| noEmoticons                          | body.options | Boolean | 否       | 不使用表情符号                     |                        |
-| exclamations2                        | body.options | Boolean | 否       | 感叹号分数加二                     |                        |
-| mood                                 | body.options | Integer | 否       | 心情                               | 可选值：-1, 0, 1       |
-| noMultiplePosWords                   | body.options | Boolean | 否       | 不允许多个积极词增加积极情感       |                        |
-| noMultipleNegWords                   | body.options | Boolean | 否       | 不允许多个消极词增加消极情感       |                        |
-| noIgnoreBoosterWordsAfterNegatives   | body.options | Boolean | 否       | 不忽略否定词后的助推词             |                        |
-| noDictionary                         | body.options | Boolean | 否       | 不使用字典纠正拼写                 |                        |
-| noDeleteExtraDuplicateLetters        | body.options | Boolean | 否       | 不删除单词中额外的重复字母         |                        |
-| illegalDoubleLettersInWordMiddle     | body.options | String  | 否       | 单词中的非法重复字母               | 默认 ahijkquvxyz       |
-| illegalDoubleLettersAtWordEnd        | body.options | String  | 否       | 单词末尾的非法重复字母             | 默认 achijkmnpqruvwxyz |
-| noMultipleLetters                    | body.options | Boolean | 否       | 不允许重复单词                     |                        |
+| 名称                                 | 位置         | 类型    | 是否必须 | 中文名                       | 说明                   |
+| ------------------------------------ | ------------ | ------- | -------- | ---------------------------- | ---------------------- |
+| alwaysSplitWordsAtApostrophes        | body.options | Boolean | 是       | 总是在撇号处分词             |                        |
+| noBoosters                           | body.options | Boolean | 是       | 不使用助推词                 |                        |
+| noNegatingPositiveFlipsEmotion       | body.options | Boolean | 是       | 不使用否定词反转情绪         |                        |
+| noNegatingNegativeNeutralisesEmotion | body.options | Boolean | 是       | 不使用否定词中和消极词       |                        |
+| negatedWordStrengthMultiplier        | body.options | Number  | 是       | 否定词的强度倍数             | 默认 0.5               |
+| maxWordsBeforeSentimentToNegate      | body.options | Integer | 是       | 否定词与感情词之间的最大词数 | 默认 0                 |
+| noIdioms                             | body.options | Boolean | 是       | 不使用习语                   |                        |
+| questionsReduceNeg                   | body.options | Boolean | 是       | 在问句中减少消极情感         |                        |
+| noEmoticons                          | body.options | Boolean | 是       | 不使用表情符号               |                        |
+| exclamations2                        | body.options | Boolean | 是       | 感叹号分数加二               |                        |
+| mood                                 | body.options | Integer | 是       | 心情                         | 可选值：-1, 0, 1       |
+| noMultiplePosWords                   | body.options | Boolean | 是       | 不允许多个积极词增加积极情感 |                        |
+| noMultipleNegWords                   | body.options | Boolean | 是       | 不允许多个消极词增加消极情感 |                        |
+| noIgnoreBoosterWordsAfterNegatives   | body.options | Boolean | 是       | 不忽略否定词后的助推词       |                        |
+| noDictionary                         | body.options | Boolean | 是       | 不使用字典纠正拼写           |                        |
+| noDeleteExtraDuplicateLetters        | body.options | Boolean | 是       | 不删除单词中额外的重复字母   |                        |
+| illegalDoubleLettersInWordMiddle     | body.options | String  | 是       | 单词中的非法重复字母         | 默认 ahijkquvxyz       |
+| illegalDoubleLettersAtWordEnd        | body.options | String  | 是       | 单词末尾的非法重复字母       | 默认 achijkmnpqruvwxyz |
+| noMultipleLetters                    | body.options | Boolean | 是       | 不允许重复单词               |                        |
 
 示例1：
 
@@ -78,18 +78,38 @@ body 类型: `application/json`
 
 
 
-示例2：
+示例2：选项全为默认值
 
 ```json
 {
     "text": "I don't hate you.",
-	"mode": "scale",
+	"mode": "default",
 	"explain": false,
 	"options": {
-		"alwaysSplitWordsAtApostrophes": true
+		"alwaysSplitWordsAtApostrophes": false,
+		"noBoosters": false,
+		"noNegatingPositiveFlipsEmotion": false,
+		"noNegatingNegativeNeutralisesEmotion": false,
+		"negatedWordStrengthMultiplier": 0.5,
+		"maxWordsBeforeSentimentToNegate": 0,
+		"noIdioms": false,
+		"questionsReduceNeg": false,
+		"noEmoticons": false,
+		"exclamations2": false,
+		"mood": -1,
+		"noMultiplePosWords": false,
+		"noMultipleNegWords": false,
+		"noIgnoreBoosterWordsAfterNegatives": false,
+		"noDictionary": false,
+		"noDeleteExtraDuplicateLetters": false,
+		"illegalDoubleLettersInWordMiddle": "ahijkquvxyz",
+		"illegalDoubleLettersAtWordEnd": "achijkmnpqruvwxyz",
+		"noMultipleLetters": false
 	}
 }
 ```
+
+
 
 
 
@@ -144,7 +164,7 @@ body类型：`application/json`
 | file    | body | String  | 是       | 文件     | 被分析的文件内容                      |
 | mode    | body | String  | 是       | 输出模式 | 可选：trinary, binary, default, scope |
 | explain | body | Boolean | 是       | 解释     | 是否需要解释                          |
-| options | body | Object  | 否       | 分析选项 | 分析选项，参考 Manual和第一个API。    |
+| options | body | Object  | 是       | 分析选项 | 分析选项，参考 Manual和第一个API。    |
 
 **options 中的参数参考第一个API**
 
@@ -154,7 +174,28 @@ body类型：`application/json`
 {
     "file": "I don't hate you.\ndoesn't work. how do I do this?\nExcellent! Just what i needed!",
 	"mode": "trinary",
-	"explain": false
+	"explain": false,
+    "options": {
+		"alwaysSplitWordsAtApostrophes": false,
+		"noBoosters": false,
+		"noNegatingPositiveFlipsEmotion": false,
+		"noNegatingNegativeNeutralisesEmotion": false,
+		"negatedWordStrengthMultiplier": 0.5,
+		"maxWordsBeforeSentimentToNegate": 0,
+		"noIdioms": false,
+		"questionsReduceNeg": false,
+		"noEmoticons": false,
+		"exclamations2": false,
+		"mood": -1,
+		"noMultiplePosWords": false,
+		"noMultipleNegWords": false,
+		"noIgnoreBoosterWordsAfterNegatives": false,
+		"noDictionary": false,
+		"noDeleteExtraDuplicateLetters": false,
+		"illegalDoubleLettersInWordMiddle": "ahijkquvxyz",
+		"illegalDoubleLettersAtWordEnd": "achijkmnpqruvwxyz",
+		"noMultipleLetters": false
+	}
 }
 ```
 
