合并接口；修正描述错误

--- a/迭代二/项目文档/接口文档/接口文档.md
+++ b/迭代二/项目文档/接口文档/接口文档.md
@@ -1,10 +1,10 @@
 # 接口文档
 
-## 1. POST 对语句运行一次情感分析
+## 1. POST 对文本运行一次情感分析
 
 ### 1.1 接口解释
 
-对某一个文本语句进行情感分析，需要指定输出的模式和是否需要解释。分析的选项是可选的。
+对某一个语句或文本进行情感分析，需要指定输出的模式以及是否需要解释。需要指定分析的选项。
 
 ### 1.2 请求路径
 
@@ -16,7 +16,7 @@ body 类型: `application/json`
 
 | 名称    | 位置 | 类型    | 是否必须 | 中文名   | 说明                                  |
 | ------- | ---- | ------- | -------- | -------- | ------------------------------------- |
-| text    | body | String  | 是       | 文本     | 被分析的文本语句                      |
+| text    | body | String  | 是       | 文本     | 被分析的文本语句，可能是多行的        |
 | mode    | body | String  | 是       | 输出模式 | 可选：trinary, binary, default, scale |
 | explain | body | Boolean | 是       | 解释     | 是否需要解释                          |
 | options | body | Object  | 是       | 分析选项 | 分析选项，参考 Manual。               |
@@ -78,101 +78,11 @@ body 类型: `application/json`
 
 
 
-示例2：选项全为默认值
+示例2：text 包含换行符
 
 ```json
 {
-    "text": "I don't hate you.",
-	"mode": "default",
-	"explain": false,
-	"options": {
-		"alwaysSplitWordsAtApostrophes": false,
-		"noBoosters": false,
-		"noNegatingPositiveFlipsEmotion": false,
-		"noNegatingNegativeNeutralisesEmotion": false,
-		"negatedWordStrengthMultiplier": 0.5,
-		"maxWordsBeforeSentimentToNegate": 0,
-		"noIdioms": false,
-		"questionsReduceNeg": false,
-		"noEmoticons": false,
-		"exclamations2": false,
-		"mood": -1,
-		"noMultiplePosWords": false,
-		"noMultipleNegWords": false,
-		"noIgnoreBoosterWordsAfterNegatives": false,
-		"noDictionary": false,
-		"noDeleteExtraDuplicateLetters": false,
-		"illegalDoubleLettersInWordMiddle": "ahijkquvxyz",
-		"illegalDoubleLettersAtWordEnd": "achijkmnpqruvwxyz",
-		"noMultipleLetters": false
-	}
-}
-```
-
-
-
-
-
-### 1.4 响应
-
-```java
-Result<TextAnalysisVO>;
-
-class TextAnalysisVO {
-    int val1;
-    int val2;
-    int val3;
-    String explain;   
-}
-```
-
-示例：
-
-```json
-{
-  "code": 0,
-  "msg": "success",
-  "data": {
-    "val1": 1,
-    "val2": -1,
-    "val3": 0,
-    "explain": "I don't hate[-4] [=0 negation] you [sentence: 1,-1] [result: max + and - of any sentence][scale result = sum of pos and neg scores]"
-  }
-}
-```
-
-### 1.5 错误情况
-
-
-
-## 2. POST 对文本文件内容运行一次情感分析
-
-### 2.1 接口解释
-
-对某一个文本文件的内容进行情感分析。需要指定输出的模式和是否需要解释。分析的选项是可选的。
-
-### 2.2 请求路径
-
-`/sentiment/analysis/file`
-
-### 2.3 请求参数
-
-body类型：`application/json`
-
-| 名称    | 位置 | 类型    | 是否必须 | 中文名   | 说明                                  |
-| ------- | ---- | ------- | -------- | -------- | ------------------------------------- |
-| file    | body | String  | 是       | 文件     | 被分析的文件内容                      |
-| mode    | body | String  | 是       | 输出模式 | 可选：trinary, binary, default, scope |
-| explain | body | Boolean | 是       | 解释     | 是否需要解释                          |
-| options | body | Object  | 是       | 分析选项 | 分析选项，参考 Manual和第一个API。    |
-
-**options 中的参数参考第一个API**
-
-示例1：
-
-```json
-{
-    "file": "I don't hate you.\ndoesn't work. how do I do this?\nExcellent! Just what i needed!",
+    "text": "I don't hate you.\ndoesn't work. how do I do this?\nExcellent! Just what i needed!",
 	"mode": "trinary",
 	"explain": false,
     "options": {
@@ -201,25 +111,48 @@ body类型：`application/json`
 
 
 
-### 2.4 响应
+### 1.4 响应
 
 ```java
-Result<FileAnalysisVO>;
+Result<List<TextAnalysisVO>>;
 
-FileAnalysisVO {
-    String result;
+class TextAnalysisVO {
+    int val1;
+    int val2;
+    int val3; // default 模式为 0
+    String explain;   
 }
 ```
+
+示例：
 
 ```json
 {
   "code": 0,
   "msg": "success",
-  "data": {
-      "result": "Positive	Negative	Text\n1	-1	I don't hate you.\n1	-1	doesn't work. how do I do this?\n5	-1	Excellent! Just what i needed!\n"
-  }
+  "data": [
+        {
+            "val1": 1,
+            "val2": -4,
+            "val3": -1,
+            "explain": "I don t hate[-4] you .[sentence: 1,-4] [result: max + and - of any sentence][overall result = -1 as pos<-neg]"
+        },
+        {
+            "val1": 1,
+            "val2": -1,
+            "val3": 0,
+            "explain": "doesn t work .[sentence: 1,-1] how do I do this ?[sentence: 1,-1] [result: max + and - of any sentence][trinary result = 0 as pos=1 neg=-1]"
+        },
+        {
+            "val1": 5,
+            "val2": -2,
+            "val3": 1,
+            "explain": "Excellent[4] ![+1 punctuation emphasis] [sentence: 5,-1] Just what i needed ![-1 punctuation mood emphasis] [sentence: 1,-2] [result: max + and - of any sentence][overall result = 1 as pos>-neg]"
+        }
+    ]
 }
 ```
 
-### 2.5 错误情况
+### 1.5 错误情况
+
 
