第三次会议更新

--- a/迭代二/迭代二任务安排.md
+++ b/迭代二/迭代二任务安排.md
@@ -3,6 +3,8 @@
 | 变更人 | 变更日期   | 变更内容   |
 | ------ | ---------- | ---------- |
 | 谭子悦 | 2023/03/21 | 文档初始化 |
+| 谭子悦 | 2023/03/28 | 第二次会议后更新 |
+| 谭子悦 | 2023/04/04 | 第三次会议后更新 |
 
 [TOC]
 
@@ -80,19 +82,32 @@
 
 ### 1. 人员安排
 
-| 任务  | 负责人           | 完成情况 | 备注 |
-| ----- | ---------------- | -------- | ---- |
-| `C11` | 谭子悦           |          |      |
-| `C12` | 谭子悦           |          |      |
-| `C21` | 华广松           |          |      |
-| `C31` | 杜威 徐浩钦 陈骏 |          |      |
-| `C32` | 杜威 徐浩钦 陈骏 |          |      |
-| `C33` | 杜威 徐浩钦 陈骏 |          |      |
-| `C41` | 谭子悦           |          |      |
-| `C42` | 邓尤亮           |          |      |
-| `C51` | TODO             |          |      |
-| `O21` | 华广松           |          |      |
-| `O31` | 杜威 徐浩钦 陈骏 |          |      |
+| 任务  | 负责人           | 完成情况 | 备注                             |
+| ----- | ---------------- | -------- | -------------------------------- |
+| `C11` | 谭子悦           |          |                                  |
+| `C12` | 谭子悦           |          |                                  |
+| `C21` | 华广松           |          |                                  |
+| `C31` | 杜威 徐浩钦 陈骏 | X        | 根据最新作业要求，略过此部分任务 |
+| `C32` | 杜威 徐浩钦 陈骏 | X        |                                  |
+| `C33` | 杜威 徐浩钦 陈骏 | X        |                                  |
+| `C41` | 谭子悦           |          | 已完成：参数解析、路径解析       |
+| `C42` | 邓尤亮           | X        |                                  |
+| `C51` | 见下述分工       |          |                                  |
+| `O21` | 华广松           |          |                                  |
+| `O31` | 杜威 徐浩钦 陈骏 |          |                                  |
+
+#### 功能展示分工
+
+总时长 8 分钟，分为四个部分，各部分控制在 2 分钟内。
+
+在 2023.04.08 前所有人完成自己负责的部分。
+
+2023.04.08 开下一次会议，会后开始着手分别进行功能展示的录制。
+
+- `华广松`：分析结果
+- `邓尤亮`：前端
+- `谭子悦`：重构、CICD 流水线
+- `杜威、徐浩钦、陈骏`：CheckStyle
 
 ### 2. 时间安排
 
