--- a/迭代二/迭代二任务安排.md
+++ b/迭代二/迭代二任务安排.md
@@ -86,7 +86,7 @@
 | ----- | ---------------- | -------- | -------------------------------- |
 | `C11` | 谭子悦           |          |                                  |
 | `C12` | 谭子悦           |          |                                  |
-| `C21` | 华广松           |          |                                  |
+| `C21` | 华广松           | X        |                                  |
 | `C31` | 杜威 徐浩钦 陈骏 | X        | 根据最新作业要求，略过此部分任务 |
 | `C32` | 杜威 徐浩钦 陈骏 | X        |                                  |
 | `C33` | 杜威 徐浩钦 陈骏 | X        |                                  |
