更新任务完成情况

--- a/迭代二/迭代二任务安排.md
+++ b/迭代二/迭代二任务安排.md
@@ -82,19 +82,19 @@
 
 ### 1. 人员安排
 
-| 任务  | 负责人           | 完成情况 | 备注                             |
-| ----- | ---------------- | -------- | -------------------------------- |
-| `C11` | 谭子悦           |          |                                  |
-| `C12` | 谭子悦           |          |                                  |
-| `C21` | 华广松           | X        |                                  |
-| `C31` | 杜威 徐浩钦 陈骏 | X        | 根据最新作业要求，略过此部分任务 |
-| `C32` | 杜威 徐浩钦 陈骏 | X        |                                  |
-| `C33` | 杜威 徐浩钦 陈骏 | X        |                                  |
-| `C41` | 谭子悦           |          | 已完成：参数解析、路径解析       |
-| `C42` | 邓尤亮           | X        |                                  |
-| `C51` | 见下述分工       |          |                                  |
-| `O21` | 华广松           |          |                                  |
-| `O31` | 杜威 徐浩钦 陈骏 |          |                                  |
+| 任务  | 负责人           | 完成情况 | 备注                                       |
+| ----- | ---------------- | -------- | ------------------------------------------ |
+| `C11` | 谭子悦           | X        |                                            |
+| `C12` | 谭子悦           | X        |                                            |
+| `C21` | 华广松           | X        |                                            |
+| `C31` | 杜威 徐浩钦 陈骏 | X        | 根据最新作业要求，略过此部分任务           |
+| `C32` | 杜威 徐浩钦 陈骏 | X        |                                            |
+| `C33` | 杜威 徐浩钦 陈骏 | X        |                                            |
+| `C41` | 谭子悦           |          | 已完成：参数解析、路径解析、参数结构体解析 |
+| `C42` | 邓尤亮           | X        |                                            |
+| `C51` | 见下述分工       |          |                                            |
+| `O21` | 华广松           |          |                                            |
+| `O31` | 杜威 徐浩钦 陈骏 |          |                                            |
 
 #### 功能展示分工
 
