第四次会议

--- a/迭代二/迭代二任务安排.md
+++ b/迭代二/迭代二任务安排.md
@@ -5,6 +5,7 @@
 | 谭子悦 | 2023/03/21 | 文档初始化 |
 | 谭子悦 | 2023/03/28 | 第二次会议后更新 |
 | 谭子悦 | 2023/04/04 | 第三次会议后更新 |
+| 谭子悦 | 2023/04/08 | 第四次会议后更新 | 
 
 [TOC]
 
@@ -14,8 +15,8 @@
 
 #### 1.1 任务
 
-- [ ] `C11 - <必须>` 完成后端代码的 CI/CD
-- [ ] `C12 - <必须>` 完成前端代码的 CI/CD
+- [x] `C11 - <必须>` 完成后端代码的 CI/CD
+- [x] `C12 - <必须>` 完成前端代码的 CI/CD
 
 ### 2. 运行代码
 
@@ -23,7 +24,7 @@
 
 > Note: 迭代二中的所有代码变更不应影响 SentiStrength 的分析结果！
 
-- [ ] `C21 - <必须>` 使⽤ SentiStrength，分析助教提供的的软⼯⽂本和社交⽂本的情绪，并对⽐⼆者在情绪表达上的不同
+- [x] `C21 - <必须>` 使⽤ SentiStrength，分析助教提供的的软⼯⽂本和社交⽂本的情绪，并对⽐⼆者在情绪表达上的不同
 - [ ] `O21 - [可选]` ⾃⾏提供更多的软⼯⽂本和社交⽂本，并尝试对其分析，观察能否有更多发现。（核⼼不是新数据集的数量，⽽是分析结果的差异）
 
 #### 2.2 要求
@@ -38,9 +39,9 @@
 
 #### 3.1 任务
 
-- [ ] `C31 - <必须>` 尝试找出系统功能 bug 并修复；
-- [ ] `C32 - <必须>` 使⽤ CheckStyle 检查 SentiStrength 源代码，根据检查结果，优化源代码；
-- [ ] `C33 - <必须>` 对⽐ CheckStyle 的检查和⼈⼯ debug 的结果，即哪些问题是⼩组成员认为存在的，但 CheckStyle 未检查出来，以及反之；
+- [x] `C31 - <必须>` 尝试找出系统功能 bug 并修复；
+- [x] `C32 - <必须>` 使⽤ CheckStyle 检查 SentiStrength 源代码，根据检查结果，优化源代码；
+- [x] `C33 - <必须>` 对⽐ CheckStyle 的检查和⼈⼯ debug 的结果，即哪些问题是⼩组成员认为存在的，但 CheckStyle 未检查出来，以及反之；
 - [ ] `O31 - [可选]` 可同时使⽤其他代码检查⼯具检查 SentiStrength 源代码。若使⽤其他⼯具检查，需对⽐使⽤⼯具产出结果和 CheckStyle 产出结果的不同；
 
 #### 3.2 要求
@@ -54,7 +55,7 @@
 #### 4.1 任务
 
 - [ ] `C41 - <必须>` 可利⽤设计模式优化，重构代码，重构后需提供设计⽂档，并在⽂档中说明设计的逻辑；
-- [ ] `C42 - <必须>` 为 SentiStrength 设计 UI ,要求可以完成基本 GUI 交互，UI 样式可参考官⽹；
+- [x] `C42 - <必须>` 为 SentiStrength 设计 UI ,要求可以完成基本 GUI 交互，UI 样式可参考官⽹；
   - 接口文档写成 Markdown，包含内容：
     - 接口名称、URL、参数（穿参数的方法）、HTTP 方法、返回值、错误处理……
 
@@ -82,37 +83,46 @@
 
 ### 1. 人员安排
 
-| 任务  | 负责人           | 完成情况 | 备注                                       |
-| ----- | ---------------- | -------- | ------------------------------------------ |
-| `C11` | 谭子悦           | X        |                                            |
-| `C12` | 谭子悦           | X        |                                            |
-| `C21` | 华广松           | X        |                                            |
-| `C31` | 杜威 徐浩钦 陈骏 | X        | 根据最新作业要求，略过此部分任务           |
-| `C32` | 杜威 徐浩钦 陈骏 | X        |                                            |
-| `C33` | 杜威 徐浩钦 陈骏 | X        |                                            |
-| `C41` | 谭子悦           |          | 已完成：参数解析、路径解析、参数结构体解析 |
-| `C42` | 邓尤亮           | X        |                                            |
-| `C51` | 见下述分工       |          |                                            |
-| `O21` | 华广松           |          |                                            |
-| `O31` | 杜威 徐浩钦 陈骏 |          |                                            |
+| 任务  | 负责人           | 完成情况 | 备注                                                         |
+| ----- | ---------------- | -------- | ------------------------------------------------------------ |
+| `C11` | 谭子悦           | X        |                                                              |
+| `C12` | 谭子悦           | X        | TODO: 文档还需要补充                                         |
+| `C21` | 华广松           | X        |                                                              |
+| `C31` | 杜威 徐浩钦 陈骏 | X        | 根据最新作业要求，略过此部分任务                             |
+| `C32` | 杜威 徐浩钦 陈骏 | X        |                                                              |
+| `C33` | 杜威 徐浩钦 陈骏 | X        |                                                              |
+| `C41` | 谭子悦           |          | TODO: 文档还没写（重构 & 后端）；已完成：参数解析、路径解析、参数结构体解析 |
+| `C42` | 邓尤亮           | X        |                                                              |
+| `C51` | 见下述分工       |          |                                                              |
+| `O21` | 华广松           |          |                                                              |
+| `O31` | 杜威 徐浩钦 陈骏 |          |                                                              |
 
-#### 功能展示分工
+#### 功能展示
 
-总时长 8 分钟，分为四个部分，各部分控制在 2 分钟内。
+总时长 5 分钟内，分为四个部分，各部分控制在 1～2 分钟内。
 
-在 2023.04.08 前所有人完成自己负责的部分。
-
-2023.04.08 开下一次会议，会后开始着手分别进行功能展示的录制。
+在 4 月 16 日前，完成各自部分的录制，最后汇总提交。
 
 - `华广松`：分析结果
 - `邓尤亮`：前端
-- `谭子悦`：重构、CICD 流水线
-- `杜威、徐浩钦、陈骏`：CheckStyle
+- `谭子悦`：后端、重构、CICD 流水线
+- `杜威、徐浩钦、陈骏`：
+  - CheckStyle 优化前后对比
+  - 不同工具对比
+  
+
+每部分：
+
+- 开头需要介绍主题、该部分的主要内容
+- 展示形式自选，可录屏或幻灯片
+  - 如需幻灯片请采用最简单的白底设计，不要套用模板。
+
+全部完成后剪辑汇总，片头加入小组介绍和对各部分的总体介绍。
 
 ### 2. 时间安排
 
 - 中期检查：2023.03.27
-- 最终截止日期：2023.04.14
+- 最终截止日期：~~2023.04.14~~ 2023.04.21
 
 迭代二总共的开发时间大约为三周，可以分为 W1, W2, W3.
 
